refactor: getFirst 메서드 적용